--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,9 +238,99 @@ h2.active {
 	color: #ffffff;
 }
 .trocar1{
+	font-weight: 900;
 	color: #ff0000;
 }
 
 .trocar2{
+	font-weight: 900;
 	color: #02c412;
+}
+
+.seta-cima:before {
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 10px;
+	width: 0; 
+	height: 0; 
+
+	border-left: 6.5px solid transparent;
+	border-right: 6.5px solid transparent;
+	border-bottom: 6.5px solid #fff;
+}
+
+.seta-baixo:before {
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 10px;
+	width: 0; 
+	height: 0; 
+
+	border-left: 6.5px solid transparent;
+	border-right: 6.5px solid transparent;
+	border-top: 6.5px solid #fff;
+}
+.progresso{
+	background-color: #0105ff;
+	width: 100%;
+	height: 15px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+.btn-success2{
+	color: #fff;
+	background-color: #2874a7;
+	border-color: #2874a7;
+	box-shadow: 2px 5px 5px #95949480;
+
+}
+.btn-success2:hover {
+	color: #fff;
+	background-color: #215688;
+	border-color: #282188;
+}
+.resposta{
+	position: relative;
+	background-color: #f2f2f2;
+	width: 90%;
+	float: left;
+	padding-left: 10px;
+}
+.justificativa {
+	position: relative;
+	background-color: #ddd;
+	padding-left: 10px;
+	width: 90%;
+	float: right;
+}
+.rolagem{
+	overflow:scroll;
+	height:400px;
+	width:100%;
+	overflow:auto
+}
+.horario{
+	font-size: 10px;
+	color: #999;
+}
+.textareanova{
+	border-radius: 5px;
+}
+.selecao_option{
+	display: inline-block;
+	width: 100%;
+	height: calc(1.5em + 0.75rem + 2px);
+	padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+	font-size: 0.75rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #495057;
+	vertical-align: middle;
+	/*background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;*/
+	background-color: #fff;
+	border: 1px solid #ced4da;
+	border-radius: 0.25rem;
+	appearance: none;
 }
